--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-asgiref==3.5.2
-Django==4.1
-djangorestframework==3.13.1
-mysql-connector-python==8.0.30
-mysqlclient==2.1.1
-pytz==2022.2.1
-sqlparse==0.4.2
-tzdata==2022.2
-
-requests~=2.28.2
+django-multiselectfield==0.1.12
+djangorestframework==3.14.0
+dramatiq==1.14.2
+dramatiq-crontab==1.0.3
+imutils==0.5.4
+mysql-connector-python==8.0.33
+opencv-python==4.7.0.72
+Pillow==10.0.0
+requests==2.28.2
+Unidecode==1.3.6
