--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.sw[po]
 *~
 /secrets.json
+/API Access Control Gateway.postman_collection.json
+/workspace.postman_globals.json
 
 ### VisualStudioCode ###
 .vscode/*
