--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,35 @@
+amqp==5.1.1
+asgiref==3.7.2
+billiard==4.1.0
+celery==5.3.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+Django==4.2.4
 django-multiselectfield==0.1.12
 djangorestframework==3.14.0
-dramatiq==1.14.2
-dramatiq-crontab==1.0.3
+idna==3.4
 imutils==0.5.4
-mysql-connector-python==8.0.33
-opencv-python==4.7.0.72
+kombu==5.3.1
+mysql==0.0.3
+mysql-connector-python==8.1.0
+mysqlclient==2.2.0
+numpy==1.25.2
+opencv-python==4.8.0.76
 Pillow==10.0.0
-requests==2.28.2
+prompt-toolkit==3.0.39
+protobuf==4.21.12
+python-dateutil==2.8.2
+pytz==2023.3
+PyYAML==6.0.1
+requests==2.31.0
+six==1.16.0
+sqlparse==0.4.4
+tzdata==2023.3
 Unidecode==1.3.6
+urllib3==2.0.4
+vine==5.0.0
+wcwidth==0.2.6
