Vista dispositivo indivual

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 /secrets.json
 /API Access Control Gateway.postman_collection.json
 /workspace.postman_globals.json
+/go2rtc.exe
+/go2rtc.yaml
 
 ### VisualStudioCode ###
 .vscode/*
