--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 /go2rtc.exe
 /go2rtc.yaml
 /user_profile_api/migrations/
+/celerybeat-schedule.bak
+/celerybeat-schedule.dat
+/celerybeat-schedule.dir
 
 ### VisualStudioCode ###
 .vscode/*
