--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /secrets.json
 /API Access Control Gateway.postman_collection.json
 /workspace.postman_globals.json
+/go2rtc_linux_amd64
+/go2rtc.yaml
+/users_profile_api/migrations/*
 
 ### VisualStudioCode ###
 .vscode/*
